Static site (2020-04-18 shi)
==============================
Update FAQ with explore 9 about more filters and trending buttons
Update other languages, french will be out of date


Static site (2020-01-31 shi)
==============================
Update FAQ text for general 13 about data not showing on d-portal
Update other languages, french will be out of date


Static site (2020-01-30 shi)
==============================
Update FAQ to include why activities are not listed on ending soon list
Update other language pages, french will be out of date


Static site (2019-01-14 shi)
==============================
Add new post (half day)
Update FAQ


Static site (2019-01-11 shi)
==============================
Add FAQ for new transaction graphs in SAVi
Update all translations


Static site (2019-01-02 shi)
==============================
Update attribution for csv
Update all translations


Static site (2018-12-17 shi)
==============================
Added FAQ technical question 16 from Github issue #441
Updated new question for translations
Updated css for span.list in FAQ


Static site (2018-04-26 shi)
==============================
Update footer text about IATI


Static site (2018-04-13 shi)
==============================
Update attribution for translation
Update FAQ section for About page
Update footer for static site
Update all translations
Add subject to all email links sitewide


Static site (2018-04-12 shi)
==============================
Add translation system for FAQ
Add french translation for FAQ
Update all other translations
Add french translation attribution in About page
Update FAQ numbering style
Update css for FAQ page


Static site (2018-04-06 shi)
==============================
Clean up faq, about, news chunks
New redesign for blog list
Update blog links
Added summary to blog posts


Static site (2018-04-03 shi)
==============================
Tweaked blog post with more descriptions and screenshots


Static site (2018-03-21 shi)
==============================