@@ -518,7 +518,7 @@ helps you explore IATI data.
 It provides a search function and information by country or by publisher on development activities and budgets published to the International Aid Transparency Initiative (IATI).
 
 #footer9_text
-d-portal is currently in BETA. Whilst publicly available, d-portal is not considered finished. Please feedback if you experience any bugs and missing features.
+d-portal is currently in BETA. While publicly available, d-portal is not considered finished. Please feedback if you experience any bugs and missing features.
 
 #footer10_text
 If you have any queries about how the data is shown in d-portal, or how up to date the data is, please see the <a href="/faq.html">FAQ</a> or contact the IATI support helpdesk
