@@ -272,11 +272,11 @@ a.data_invest:hover		{color:#FFF; background-color:rgba(194,0,255,0.8);}
 .footer_link a:hover	{color:#FFF;}
 .footer_link a:active	{color:#999;}
 .footer_link.about		{text-align:right;}
-.footer_link.top		{text-align:right; width:960px; padding:0 0 40px 0;}
+.footer_link.top		{width:960px; padding:40px 0;}
 .footer_link.top a		{display:block; text-align:center; padding:20px 0;}
 .footer_link ul			{padding-bottom:20px;}
 .footer_link p			{padding:15px 0;}
-.footer_link p.beta		{font-style:italic; color:#ccc;}
+.footer_link p.beta		{font-style:italic; color:#ccc; font-size:16px; line-height:22px;}
 .footer_motto			{font-size:22px; line-height:27px;}
 .footer_motto a			{color:#53B4ED; font-weight:bold; line-height:27px;}
 .footer_motto a:focus	{color:#53B4ED;}
