@@ -132,10 +132,10 @@ helps you explore IATI data.
 It provides a search function and information by country or by publisher on development activities and budgets published to the International Aid Transparency Initiative (IATI).
 
 #^footer9_text
-d-portal is currently in BETA. While d-portal is publicly available, it is not considered finished. Please feedback if you experience any bugs and missing features.
+d-portal is currently in BETA. While publicly available, d-portal is not considered finished. Please feedback if you experience any bugs and missing features.
 
 #^footer10_text
-If you have any queries about how the data is shown in d-portal, or how up to date the data is, please see the FAQs or contact the IATI support helpdesk
+If you have any queries about how the data is shown in d-portal, or how up to date the data is, please see the FAQ or contact the IATI support helpdesk
 
 #^footer11_text
 support@iatistandard.org
@@ -147,10 +147,10 @@ Tools &amp; Updates
 Latest news posts
 
 #^footer14_text
-Dash - Publishers statistics
+Dash - Publisher statistics
 
 #^footer15_text
-Generator - Widgets for your website
+Generator widgets for your website
 
 #^footer16_text
 Information
@@ -417,7 +417,7 @@ By showing you when and where invalid data is reported, Dash will be able to exp
 Dash is not country specific so you will be able to view all of the publisher statistics available across all countries included in the portal. This is to accommodate the fact that there are multiple publishers that report activities in multiple recipient countries.
 
 #^dash_paragraph4_text
-Dash is constantly being updated <a href="http://d-portal.org/ctrack.html?#view=dash">http://d-portal.org/ctrack.html?#view=dash</a>.
+Dash is constantly being updated <a href="http://d-portal.org/ctrack.html?#view=dash">http://d-portal.org/ctrack.html?#view=dash</a>
 
 #^gen_title_text
 Generator widgets for your website
@@ -429,7 +429,7 @@ There is a huge amount of interesting information within IATI and significant va
 Once you’ve embedded any content it will update automatically (overnight) as publishers’ data is updated in the IATI registry. When users click on the content they will be directed to the relevant page on d-portal so they can investigate further.
 
 #^gen_paragraph3_text
-The generator is currently accessible at <a href="http://www.d-portal.org/ctrack.html?#view=generator">http://www.d-portal.org/ctrack.html?#view=generator</a>.
+The generator is currently accessible at <a href="http://www.d-portal.org/ctrack.html?#view=generator">http://www.d-portal.org/ctrack.html?#view=generator</a>
 
 #^news_title_text
 News and updates
@@ -444,7 +444,7 @@ If you would like to keep up-to-date with news on d-portal through a mailing lis
 Updates are occasional and usually relate to new features or information available on d-portal.
 
 #^news_paragraph4_text
-Start reading News at <a href="http://www.d-portal.org/news.html">http://www.d-portal.org/news.html</a>.
+Start reading at <a href="http://www.d-portal.org/news.html">http://www.d-portal.org/news.html</a>
 
 #^faq_title_text
 Frequently Asked Questions
@@ -456,28 +456,28 @@ d-portal is an expansive site that contains not only the country and publisher b
 There are 4 sections - General, Technical, information about the Explore search feature and Generator widgets. We currently support both English and French translations. If you would like to provide translations for other languages, we encourage you to <a href="mailto:support@iatistandard.org?subject=Translations%20for%20d-portal.org">get in touch</a>.
 
 #^faq_paragraph3_text
-FAQ can be found at <a href="http://www.d-portal.org/faq.html">http://www.d-portal.org/faq.html</a>.
+FAQ can be found at <a href="http://www.d-portal.org/faq.html">http://www.d-portal.org/faq.html</a>
 
 #^discover_title_text
 Explore
 
 #^discover_paragraph1_text
-Explore is a new feature that is currently under second stage of development. Backed by dstore and Q, it provides a simple interface for users to filter through the vast IATI database.
+Backed by dstore and Q, <b>Explore</b> provides a simple interface for users to filter through the vast IATI database.
 
 #^discover_paragraph2_text
-We are currently seeking feedback on the intuitiveness and usability of Explore. Do have a go and send us your feedback by adding a new issue through the <a href="https://github.com/devinit/D-Portal/issues">Github forum</a> or, if you prefer, get in touch through <a href="mailto:support@iatistandard.org?subject=Feedback%20on%20d-portal.org">support@iatistandard.org</a>. We'd love to hear what you think!
+We are always seeking feedback on the intuitiveness and usability of Explore. Send us your feedback by adding a new issue through the <a href="https://github.com/devinit/D-Portal/issues">Github forum</a> or, if you prefer, get in touch through <a href="mailto:support@iatistandard.org?subject=Feedback%20on%20d-portal.org">support@iatistandard.org</a>
 
 #^discover_paragraph3_text
-Try Explore at <a href="http://www.d-portal.org/ctrack.html#view=search">http://www.d-portal.org/ctrack.html#view=search</a>.
+Explore IATI data at <a href="http://www.d-portal.org/ctrack.html#view=search">http://www.d-portal.org/ctrack.html#view=search</a>
 
 #^dlogs_title_text
-Database Logs
+Database Logs and Xpath Stats
 
 #^dlogs_paragraph1_text
-Statistics & graphs of the d-portal database generated from nightly imports. This was created to track the increasing number of IATI activities published to d-portal.
+Statistics & graphs of the d-portal database generated from nightly imports. This was created to track the increasing number of IATI activities and usage of IATI elements published to d-portal.
 
 #^dlogs_paragraph2_text
-Visit the database at <a href="https://xriss.github.io/D-Portal-Logs/">https://xriss.github.io/D-Portal-Logs/</a>.
+Visit the database at <a href="https://xriss.github.io/D-Portal-Logs/">https://xriss.github.io/D-Portal-Logs/</a>
 
 #^publisher_title_text
 Explore a Publisher
