@@ -60,8 +60,6 @@
 			<p>{about_paragraph15_text}</p>
 			<p><span class="bold">d-portal.org</span> {about_paragraph6_text}</p>
 			<p>{about_paragraph11_text}</p>
-			<p>{about_paragraph12_text}</p>
-			<p>{about_paragraph13_text}</p>
 		</div>	
 	</div>
 </div>
@@ -171,7 +169,6 @@
 		<div class="about_wrap moretxt">
 			<h1>{news_title_text}</h1>
 			<p>{news_paragraph1_text}</p>
-			<p>{news_paragraph2_text}</p>
 			<p>{news_paragraph3_text}</p>
 			<p>{news_paragraph4_text}</p>
 		</div>
@@ -304,7 +301,6 @@
 			<a href="https://github.com/devinit/D-Portal" target="_blank" class="git">{github_info1_text} <span class="bold">Github</span>!</a>
 			<div class="gitinfo">
 				<p>{github_info2_text}</p>
-				<p>{github_info3_text}</p>
 			</div>
 		</div><div class="octocat">
 			<a href="https://github.com/devinit/D-Portal" target="_blank" title="{github_tip_text}"><img src="{_root}ctrack/art/Octocat.png" alt="Octocat for Github logo" width="300" height="249"/></a>
