@@ -1,3 +1,9 @@
+Static site (2020-04-19 shi)
+==============================
+Update About page
+Fix footer text
+
+
 Static site (2020-04-18 shi)
 ==============================
 Update FAQ with explore 9 about more filters and trending buttons
